you wish to extend the World with. The Sinatra example illustrates how to do this. Also check out
the RDoc for Cucumber::StepMother#World.

The Visitor API (which is used for formatters) has also changed slightly. However, we have tried to
do this in a backwards compatible way, so if you have custom formatters for Cucumber 0.2 they should
still work.

=== New features
* Added translation for Bulgarian (Krasimir Angelov)
* Updated translation for Polish (#273 Grzegorz Marszałek)
* Only a single World proc can be registered. World extension now happens by calling #World with ruby modules.
* Portuguese uses Funcionalidade in stead of Característica and accented words are aliased with unaccented ones (Alexandre da Silva and Felipe Coury).
* The usage formatter also prints unused step definitions (Aslak Hellesøy)
* Better exception if a World proc returns nil. (Aslak Hellesøy)
* Allow Step Definitions to use |*varargs|, but only on Ruby 1.9. (Aslak Hellesøy)
* Snippets for steps that use Step Tables or PyStrings include block param and object type hint comment (#247 Joseph Wilk)
* Support description string for Backgrounds (#271 Joseph Wilk)

=== Bugfixes
* Fixed incorrect calculation of pystring indentation (#279 Eugene Naydanov)
* Fixed --format html leads to an error (#252 Aslak Hellesøy)
* Fixed Background runs twice (#255 Aslak Hellesøy)
* Fixed Background Transactions and :xx (#270 Aslak Hellesøy)
* Fixed Autospec failing with cucumber 0.2 (#254 Aslak Hellesøy)
* Sibling file detecting not working (#278 Aslak Hellesøy)

=== Removed/changed features
* The visitor API has changed slightly:
** #visit_step_name, #visit_multiline_arg and #visit_exception are no longer official API methods.
** #visit_step_result replaces those 3 methods.
** Table and PyString no longer hold status information. Each visitor subclass should store state in @state if needed.
** #visit_py_string no longer takes a status argument.

== 0.2.3 2009-03-30
